--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1137,6 +1137,19 @@ section,
   border-radius: 50px;
 }
 
+.general-button{
+  color: var(--contrast-color);
+  background: var(--accent-color);
+  border: 0;
+  padding: 10px 30px;
+  transition: 0.4s;
+  border-radius: 50px;
+}
+
+.general-button:hover {
+  background: color-mix(in srgb, var(--accent-color), transparent 25%);
+}
+
 .contact .php-email-form button[type=submit]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 25%);
 }
